--- a/Makefile.win
+++ b/Makefile.win
@@ -4,14 +4,14 @@
 CPP      = g++.exe -D__DEBUG__
 CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = findandreplace.o texteditor.o crud.o totalchar.o Array_TE.o
-LINKOBJ  = findandreplace.o texteditor.o crud.o totalchar.o Array_TE.o
-LIBS     = -L"D:/DevC++/Dev-Cpp/MinGW64/lib" -L"D:/DevC++/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -g3
-INCS     = -I"D:/DevC++/Dev-Cpp/MinGW64/include" -I"D:/DevC++/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"D:/DevC++/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
-CXXINCS  = -I"D:/DevC++/Dev-Cpp/MinGW64/include" -I"D:/DevC++/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"D:/DevC++/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"D:/DevC++/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
+OBJ      = findandreplace.o texteditor.o crud.o Untitled3.o totalchar.o Untitled5.o
+LINKOBJ  = findandreplace.o texteditor.o crud.o Untitled3.o totalchar.o Untitled5.o
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -g3
+INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
+CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
 BIN      = Project2.exe
-CXXFLAGS = $(CXXINCS) -g3 -g
-CFLAGS   = $(INCS) -g3 -g
+CXXFLAGS = $(CXXINCS) -g3
+CFLAGS   = $(INCS) -g3
 RM       = rm.exe -f
 
 .PHONY: all all-before all-after clean clean-custom
@@ -35,6 +35,3 @@ crud.o: crud.cpp
 
 totalchar.o: totalchar.cpp
 	$(CPP) -c totalchar.cpp -o totalchar.o $(CXXFLAGS)
-
-Array_TE.o: Array_TE.cpp
-	$(CPP) -c Array_TE.cpp -o Array_TE.o $(CXXFLAGS)
