--- a/Makefile.win
+++ b/Makefile.win
@@ -1,33 +1,18 @@
-# Project: ProyekTeksEditor
+# Project: Project3
 # Makefile created by Embarcadero Dev-C++ 6.3
 
-<<<<<<< HEAD
 CPP      = g++.exe -D__DEBUG__
-CC       = c++.exe -D__DEBUG__
+CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = findandreplace.o texteditor.o crud.o totalchar.o
-LINKOBJ  = findandreplace.o texteditor.o crud.o totalchar.o
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -g3
-INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
-CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = Project2.exe
-CXXFLAGS = $(CXXINCS) -g3
-CFLAGS   = $(INCS) -g3
-RM       = rm.exe -f
-=======
-CPP      = g++.exe
-CC       = gcc.exe
-WINDRES  = windres.exe
-OBJ      = main.o Menu.o Jml_BarisKolom.o Display.o Edit.o FindAndReplace.o Delete.o Insert.o
-LINKOBJ  = main.o Menu.o Jml_BarisKolom.o Display.o Edit.o FindAndReplace.o Delete.o Insert.o
-LIBS     = -L"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/lib" -L"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/lib" -static-libgcc
+OBJ      = editor.o linkedlist.o main.o FileHandl.o
+LINKOBJ  = editor.o linkedlist.o main.o FileHandl.o
+LIBS     = -L"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/lib" -L"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/lib" -static-libgcc -g3
 INCS     = -I"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/include" -I"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include"
 CXXINCS  = -I"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/include" -I"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include" -I"D:/Aplikasi/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include/c++"
-BIN      = "Proyek Teks Editor.exe"
-CXXFLAGS = $(CXXINCS) 
-CFLAGS   = $(INCS) 
+BIN      = Project4.exe
+CXXFLAGS = $(CXXINCS) -g3
+CFLAGS   = $(INCS) -g3
 DEL      = D:\Aplikasi\Dev-Cpp\DevCpp.exe INTERNAL_DEL
->>>>>>> Tubagus
 
 .PHONY: all all-before all-after clean clean-custom
 
@@ -39,26 +24,14 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-main.o: main.cpp
-	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
+editor.o: editor.c
+	$(CPP) -c editor.c -o editor.o $(CXXFLAGS)
 
-Menu.o: Menu.cpp
-	$(CPP) -c Menu.cpp -o Menu.o $(CXXFLAGS)
+linkedlist.o: linkedlist.c
+	$(CPP) -c linkedlist.c -o linkedlist.o $(CXXFLAGS)
 
-Jml_BarisKolom.o: Jml_BarisKolom.cpp
-	$(CPP) -c Jml_BarisKolom.cpp -o Jml_BarisKolom.o $(CXXFLAGS)
+main.o: main.c
+	$(CPP) -c main.c -o main.o $(CXXFLAGS)
 
-Display.o: Display.cpp
-	$(CPP) -c Display.cpp -o Display.o $(CXXFLAGS)
-
-Edit.o: Edit.cpp
-	$(CPP) -c Edit.cpp -o Edit.o $(CXXFLAGS)
-
-FindAndReplace.o: FindAndReplace.cpp
-	$(CPP) -c FindAndReplace.cpp -o FindAndReplace.o $(CXXFLAGS)
-
-Delete.o: Delete.cpp
-	$(CPP) -c Delete.cpp -o Delete.o $(CXXFLAGS)
-
-Insert.o: Insert.cpp
-	$(CPP) -c Insert.cpp -o Insert.o $(CXXFLAGS)
+FileHandl.o: FileHandl.c
+	$(CPP) -c FileHandl.c -o FileHandl.o $(CXXFLAGS)
