Add Find and Replace

--- a/Proyek2 EAS1/Makefile.win
+++ b/Proyek2 EAS1/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe -D__DEBUG__
 CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = editor.o linkedlist.o main.o
-LINKOBJ  = editor.o linkedlist.o main.o
+OBJ      = editor.o linkedlist.o main.o Find.o
+LINKOBJ  = editor.o linkedlist.o main.o Find.o
 LIBS     = -L"D:/DevC++/Dev-Cpp/TDM-GCC-64/lib" -L"D:/DevC++/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/lib" -static-libgcc -g3
 INCS     = -I"D:/DevC++/Dev-Cpp/TDM-GCC-64/include" -I"D:/DevC++/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"D:/DevC++/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include"
 CXXINCS  = -I"D:/DevC++/Dev-Cpp/TDM-GCC-64/include" -I"D:/DevC++/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"D:/DevC++/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include" -I"D:/DevC++/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include/c++"
@@ -32,3 +32,6 @@ linkedlist.o: linkedlist.c
 
 main.o: main.c
 	$(CPP) -c main.c -o main.o $(CXXFLAGS)
+
+Find.o: Find.cpp
+	$(CPP) -c Find.cpp -o Find.o $(CXXFLAGS)
