--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe -D__DEBUG__
 CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = editor.o linkedlist.o main.o FileHandl.o
-LINKOBJ  = editor.o linkedlist.o main.o FileHandl.o
+OBJ      = editor.o linkedlist.o main.o FileHandl.o Find.o PulDown.o
+LINKOBJ  = editor.o linkedlist.o main.o FileHandl.o Find.o PulDown.o
 LIBS     = -L"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib" -L"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/lib" -static-libgcc -g3
 INCS     = -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include"
 CXXINCS  = -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include" -I"C:/Program Files (x86)/Embarcadero/Dev-Cpp/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/9.2.0/include/c++"
@@ -35,3 +35,9 @@ main.o: main.c
 
 FileHandl.o: FileHandl.c
 	$(CPP) -c FileHandl.c -o FileHandl.o $(CXXFLAGS)
+
+Find.o: Find.cpp
+	$(CPP) -c Find.cpp -o Find.o $(CXXFLAGS)
+
+PulDown.o: PulDown.cpp
+	$(CPP) -c PulDown.cpp -o PulDown.o $(CXXFLAGS)
